--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
+    <!-- Styles -->
+    <link rel="stylesheet" href="assets/css/reset.css">
+
 </head>
 
 <body>
