🎉 feat: css code index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 
 </head>
 
