removed image heart & added emoji

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
     <div class="container">
         <h1>
-            Obtenha o <font class="txt-color">emprego certo</font> que você merece! <img
-                src="assets/images/heart-svg.svg" alt="Icon Heart">
+            Obtenha o <font class="txt-color">emprego certo</font> que você merece!❤️
         </h1>
         <p>
             Uma aplicação que retorna às vagas enviadas ao github, fornecendo a você, programador(ª), uma boa
