:tada: adress to jobs

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             Uma aplicação que retorna às vagas enviadas ao github, fornecendo a você, programador(ª), uma boa
             experiência e acesso à diversas vagas de emprego.
         </p>
-        <a href="/">Acesse</a>
+        <a href="/jobs.html">Acesse</a>
     </div>
 
 </body>
