Title, paragraph changed

--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
 
 <body>
 
+    <header>
+        <span><a href="/">tojobs</a></span>
+    </header>
+
     <div class="container">
         <h1>
-            Obtenha o <font class="txt-color">emprego certo</font> que você merece!❤️
+            Vagas para<br />
+            <font class="txt-color">Desenvolvedores</font>
         </h1>
         <p>
-            Uma aplicação que retorna às vagas enviadas ao github, fornecendo a você, programador(ª), uma boa
-            experiência e acesso à diversas vagas de emprego.
+            Oportunidades oferecidas para você trabalhar remotamente, freelance, full-time, part-time, contrato e
+            estágio ❤️
         </p>
         <a href="/jobs.html">Acesse</a>
     </div>
