feat: options bar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,35 @@
             Oportunidades oferecidas para você trabalhar remotamente, freelance, full-time, part-time, contrato e
             estágio ❤️
         </p>
-        <a href="/jobs.html">Acesse</a>
+
+        <div class="container-filtered">
+
+            <div class="search-job min">
+                <input type="text" placeholder="Senior Frontend">
+            </div>
+
+            <div class="to-modality min">
+                <select name="" id="">
+                    <option value="Freelancer">Freelancer</option>
+                    <option value="PJ">PJ</option>
+                    <option value="CLT">CLT</option>
+                </select>
+            </div>
+
+            <div class="to-from min">
+                <select name="" id="">
+                    <option value="Remoto">Remoto</option>
+                    <option value="Presencial">Presencial</option>
+                    <option value="Hibrído">Hibrído</option>
+                </select>
+            </div>
+            
+            <div class="btn-job">
+                <button>Pesquisar</button>
+            </div>
+
+        </div>
+
     </div>
 
 </body>
