scope job to added index

--- a/index.html
+++ b/index.html
@@ -71,27 +71,13 @@
     <div class="container-jobs">
         <h1>Empregos em <font class="txt-color">destaque</font>
         </h1>
-        <div class="cards">
+        <div class="vagasContainer" id="vagas-container">
 
-            <div class="card">
-                <img src="assets/images/design.png" alt="">
-                <div class="describe">
-                    <h2>
-                        Email Marketing
-                    </h2>
-                    <span>
-                        Join our team as an Email Marketing Specialist and lead our digital outreach efforts.
-                    </span>
-                    <button>
-                        <a href="/">Mais detalhes...</a>
-                    </button>
-                </div>
-            </div>
-            
+          
         </div>
     </div>
 
-    <div class="container-category">
+    <!-- <div class="container-category">
         <h1>Explorar por <font class="txt-color">categoria</font>
         </h1>
         <div class="cards">
@@ -132,9 +118,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-   
+   <script src="assets/javascript/api.js"></script>
 
 </body>
 
