--- a/index.html
+++ b/index.html
@@ -91,8 +91,12 @@
         </div>
     </div>
 
-    
 
+    <footer>
+        <span>
+            Criado por <a href="https://rafaelpintodasilva.com/" target="_blank">rafaelpintodasilva</a>
+        </span>
+    </footer>
     <script src="assets/javascript/api.js"></script>
 
 </body>
