style & feat: inclusion of classes and space formatting

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
 
 <body>
 
-    <header>
-        <span>
+    <header class="header" id="header">
             <a href="/" title="tojobs">tojobs</a>
-        </span>
     </header>
 
     <div class="container">
@@ -91,12 +89,12 @@
         </div>
     </div>
 
-
     <footer>
         <span>
             Criado por <a href="https://rafaelpintodasilva.com/" target="_blank">rafaelpintodasilva</a>
         </span>
     </footer>
+
     <script src="assets/javascript/api.js"></script>
 
 </body>
