grrrr, card removed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <header class="header" id="header">
-            <a href="/" title="tojobs">tojobs</a>
+        <a href="/" title="tojobs">tojobs</a>
     </header>
 
     <div class="container">
@@ -55,36 +55,9 @@
         <h1>Empregos em <font class="txt-color">destaque</font>
         </h1>
         <div class="vagasContainer" id="vagas-container">
-            <div class="cards">
-
-                <div class="card">
-
-                    <span class="modalidade">
-                        REMOTO
-                    </span>
-
-                    <div class="format">
-                        <img src="assets/images/programmer.png" alt="">
-                        <div class="describe">
-                            <h2 class="title">
-                                Desenvolvedor Frontend Jr
-                            </h2>
-
-                            <div class="details">
-                                <span class="date-job">🕒 09/10/2000</span>
-                                <span class="date-job">📍 Tatuí, SP</span>
-                            </div>
-
-                            <div class="click">
-                                <a href="" class="click-button">VER DETALHES DA VAGA</a>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
+            <div class="cards" id="cards">
 
             </div>
-
         </div>
     </div>
 
